syntax = "proto2";

option csharp_namespace = "Nethermind.Libp2p.Protocols.Identify.Dto";

message AddressInfo {
    required bytes multiaddr = 1;
}

message PeerRecord {

    // AddressInfo is a wrapper around a binary multiaddr. It is defined as a
    // separate message to allow us to add per-address metadata in the future.


    // peer_id contains a libp2p peer id in its binary representation.
    required bytes peer_id = 1;

    // seq contains a monotonically-increasing sequence counter to order PeerRecords in time.
    required uint64 seq = 2;

    // addresses is a list of public listen addresses for the peer.
    repeated AddressInfo addresses = 3;
}
